# atomic-femdvr

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  Confinement.py  DensityPotential.py  KohnSham.py  LICENSE  Mo_Pseudo.json  PseudoAtomDFT.py  README.md  SchrodingerSolver.py  Solve_schrodinger.py  adaptive_elements.py  atomic.py  femdvr.py  legendre.py  legendre_integrals.py  pseudo_atomic.py  pseudo_atomic_test.py  pyproject.toml  test_diis.py  test_upf.py  tox.ini  upf_interface.py  upflib_config.json  utils.py
.github/: CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  codecov.yml
.github/workflows/: tests.yml
docs/source/: cli.rst  conf.py  index.rst  installation.rst  usage.rst
examples/: C_full.json  Mo_Pseudo.json  Ne_full.json  README.md  S_Pseudo.json  Si_Pseudo.json
src/atomic_femdvr/: Confinement.py  DensityPotential.py  InitialGuess.py  KohnSham.py  Projectors.py  PseudoAtomDFT.py  ReadPseudoXml.py  SchrodingerSolver.py  Solve_schrodinger.py  XCFunctionals.py  __init__.py  __main__.py  adaptive_elements.py  anderson.py  api.py  atomic.py  bessel_transform.py  cli.py  confinement.py  density_mixing.py  density_potential.py  diis.py  dipoles.py  femdvr.py  full_atom_dft.py  full_atomic.py  hartree_test.py  initial_density.py  input.py  interp_tools.py  iotools.py  kohn_sham.py  legendre.py  legendre_integrals.py  periodic_table.py  projector_output.py  projectors.py  pseudo_atom_dft.py  pseudo_atomic.py  pseudo_atomic_test.py  (+13 more)
tests/: __init__.py  conftest.py  test_Vxc.py  test_atomic.py  test_bessel_transform.py  test_cli.py  test_femdvr.py  test_full_atomic.py  test_input_validation.py  test_pseudo_atomic.py  test_pseudoatomic.py  test_solver.py  test_upf.py  test_version.py
tests/data/Si/: Si.oncvpsp.upf  Si_Vhxc.plot  Si_Vloc.plot  Si_Vpsloc.plot
tests/fixtures/: __init__.py  directories.py  systems.py
tests/test_bessel_transform/: test_bessel_regression.csv
tests/test_full_atomic/: test_neon_scf.csv
tests/test_pseudo_atomic/: test_scf.csv  test_scf_nscf.csv
tests/test_upf/: test_load_mo_upf.csv
