[build-system]
requires = ["uv_build>=0.6.6,<1.0"]
build-backend = "uv_build"

[project]
name = "atomic_femdvr"
version = "0.0.1-dev"
description = "Solver for the atomic Kohn-Sham equation, including all-electron and pseudo-potential calculation"
readme = "README.md"
authors = [
    { name = "Michael Schüler", email = "michael.schueler@psi.ch" },
    { name = "Edward Linscott", email = "edwardlinscott@gmail.com" },
]
maintainers = [
    { name = "Michael Schüler", email = "michael.schueler@psi.ch" },
    { name = "Edward Linscott", email = "edwardlinscott@gmail.com" },
]

# See https://packaging.python.org/en/latest/guides/writing-pyproject-toml/#classifiers
# Search tags using the controlled vocabulary at https://pypi.org/classifiers
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: Pytest",
    "Framework :: Sphinx",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Typing :: Typed",
]
keywords = [
    "snekpack", # please keep this keyword to credit the cookiecutter-snekpack template
    "density functional theory",
    "dft",
    "kohn-sham",
    "pseudopotential",
    "atomic physics",
    "fem-dvr",
]

# License Information.
# See PEP-639 at https://peps.python.org/pep-0639/#add-license-files-key
license-files = [
    "LICENSE",
]

requires-python = ">=3.10"
dependencies = [
    "more_itertools", # missing from itertools in stdlib
    "tqdm", # progress bars
    "click",
    "more_click",
    "typing-extensions",
    "numpy",
    "scipy",
    "matplotlib",
    "pydantic",
    "upf_tools",
    "h5py",
    "sympy"
]

# see https://peps.python.org/pep-0735/ and https://docs.astral.sh/uv/concepts/dependencies/#dependency-groups
[dependency-groups]
tests = [
    { include-group = "pylibxc" },
    "pytest",
    "pytest-console-scripts",
    "pytest-regressions[num]",
    "coverage[toml]",
]
docs = [
    "sphinx>=8,<9",
    "sphinx-rtd-theme>=3.0","sphinx-click",
    "sphinx_automodapi",
    "autodoc_pydantic",
    # To include LaTeX comments easily in your docs.
    # If you uncomment this, don't forget to do the same in docs/conf.py
    # texext
]
lint = [
    "ruff",
]
typing = [
    # Note: deliberately does NOT pull in the "tests" group, because that
    # group transitively installs pylibxc from git (a long source build).
    # mypy runs with --ignore-missing-imports, so it does not need pylibxc.
    "pytest",
    "pytest-console-scripts",
    "pytest-regressions[num]",
    "coverage[toml]",
    "mypy",
    "pydantic",
    "click-types",
    "scipy-stubs",
    # You will probably have to add additional type stubs here, especially if you're using tox-uv
]
docs-lint = [
    { include-group = "docs" },
    "doc8",
]
format-docs = [
    { include-group = "docs" },
    "docstrfmt",
]
doctests = [
    "xdoctest",
    "pygments",
]
pyroma = [
    "pyroma",
    "pygments",
]
# follow https://github.com/astral-sh/uv/issues/6298 for switching to a uv-based version bump workflow
bump = [
    "bump-my-version",
]
build = [
    "uv",
    "uv-build",
]
release = [
    { include-group = "build" },
    "uv",
    "keyring",
]
pylibxc = [
    "pylibxc @ git+https://gitlab.com/libxc/libxc.git"
]

# see https://packaging.python.org/en/latest/guides/writing-pyproject-toml/#dependencies-optional-dependencies
[project.optional-dependencies]
pylibxc = [
    "pylibxc @ git+https://gitlab.com/libxc/libxc.git"
]
tests = [
    "pytest",
    "pytest-console-scripts",
    "pytest-regressions[num]",
    "coverage[toml]",
]

# See https://packaging.python.org/en/latest/guides/writing-pyproject-toml/#urls
# and also https://packaging.python.org/en/latest/specifications/well-known-project-urls/
[project.urls]
"Bug Tracker" = "https://github.com/michaelschueler/atomic-femdvr/issues"
Homepage = "https://github.com/michaelschueler/atomic-femdvr"
Repository = "https://github.com/michaelschueler/atomic-femdvr.git"
Documentation = "https://atomic_femdvr.readthedocs.io"

[project.scripts]
atomic_femdvr = "atomic_femdvr.cli:main"

[tool.cruft]
skip = [
    "**/__init__.py",
    "tests/*"
]

# MyPy, see https://mypy.readthedocs.io/en/stable/config_file.html
[tool.mypy]
plugins = [
    "pydantic.mypy",
]
strict = true
# Annotating numpy ndarrays (and dict / list / tuple generics) thoroughly
# is a separate sweep; disable the two checks that would otherwise produce
# hundreds of noise errors against internal solver code. The remaining
# strict checks (no-any-return, untyped-call, return-type, etc.) still
# fire and catch real bugs.
disallow_any_generics = false
disallow_untyped_defs = false
disallow_untyped_calls = false
disallow_incomplete_defs = false
warn_return_any = false

# kohn_sham contains incomplete WIP (solve_scalar_relativistic / get_green_function)
# flagged in the PR notes; softcoul_solvers calls scipy.sparse.linalg.LinearOperator
# in a shape the scipy stubs don't currently match. Skip both for now.
[[tool.mypy.overrides]]
module = ["atomic_femdvr.kohn_sham", "atomic_femdvr.softcoul_solvers"]
ignore_errors = true

# Doc8, see https://doc8.readthedocs.io/en/stable/readme.html#ini-file-usage
[tool.doc8]
max-line-length = 120

# Pytest, see https://docs.pytest.org/en/stable/reference/customize.html#pyproject-toml
[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

# Coverage, see https://coverage.readthedocs.io/en/latest/config.html
[tool.coverage.run]
branch = true
source = [
    "atomic_femdvr",
]
omit = [
    "tests/*",
    "docs/*",
    "src/atomic_femdvr/version.py",
    "src/atomic_femdvr/__main__.py",
    "src/atomic_femdvr/cli.py",
]

[tool.coverage.paths]
source = [
    "src/atomic_femdvr",
    ".tox/*/lib/python*/site-packages/atomic_femdvr",
]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == \"__main__\":",
    "if TYPE_CHECKING:",
    "def __str__",
    "def __repr__",
]

[tool.ruff]
line-length = 100
extend-include = ["*.ipynb"]

[tool.ruff.lint]
# See https://docs.astral.sh/ruff/rules
extend-select = [
    "F", # pyflakes
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "C90", # mccabe
    "I", # isort
    "UP", # pyupgrade
    "D", # pydocstyle
    "DOC", # pydoclint
    "B", # bugbear
    "S", # bandit
    "T20", # print
    "N", # pep8 naming
    "ERA", # eradicate commented out code
    "NPY", # numpy checks
    "RUF", # ruff rules
    "C4", # comprehensions
]
ignore = [
    "D105", # Missing docstring in magic method
    "D301", # Use r""" if any backslashes in a docstring; we use \\ in LaTeX math
    "E203", # Black conflicts with the following
    # Physics / math naming conventions: l (angular momentum), V_eff, Q, etc.
    # are correct domain notation; PEP 8 renaming would harm readability.
    "N802", # invalid function name (e.g. SolveNR)
    "N803", # invalid argument name (e.g. Vbarrier, Z)
    "N806", # non-lowercase variable in function (e.g. V_eff, Vpot)
    "E741", # ambiguous variable name (l = angular momentum)
    # "Undocumented X" rules deferred until the internal docstring sweep
    # lands. Public-surface docstrings are in place; D200/D400/D401 are
    # enforced (no remaining exceptions).
    "D100", # undocumented public module
    "D101", # undocumented public class
    "D102", # undocumented public method
    "D103", # undocumented public function
    "D107", # undocumented public __init__
    "D205", # missing blank line after summary
    "DOC",  # pydoclint (preview-only; emits warning)
    # Commented-out-code cleanup tracked in dedicated todo.
    "ERA001",
]

# See https://docs.astral.sh/ruff/settings/#per-file-ignores
[tool.ruff.lint.per-file-ignores]
# Ignore security issues in the version.py, which are inconsistent
"src/atomic_femdvr/version.py" = ["S603", "S607", "T201"]
# Sphinx conf.py is cookiecutter boilerplate; ignore commented-out code,
# the templated assert, and a long Texinfo metadata line.
"docs/source/conf.py" = ["E501", "ERA001", "S101"]
# Prints are okay in notebooks
"notebooks/**/*.ipynb" = ["T201"]
# Asserts are okay in tests
"tests/**/*.py" = ["S101"]
"tests/conftest.py" = ["F401"]
# kohn_sham.get_green_function is incomplete; references undefined names.
# Remove F821 once the function is finished or removed.
"src/atomic_femdvr/kohn_sham.py" = ["E501", "F821"]
# DFT functionals: dense math; semicolon-separated parameter declarations
# and long formulas mirror the source papers and are kept verbatim.
"src/atomic_femdvr/xc_functionals.py" = ["C901", "E501", "E702"]
# FEDVR_Basis: underscore in class name is the canonical spelling in the
# FEM-DVR literature.
"src/atomic_femdvr/femdvr.py" = ["C901", "E501", "N801"]
# DFT solver loops are intrinsically multi-branch.
"src/atomic_femdvr/full_atom_dft.py" = ["C901"]
"src/atomic_femdvr/pseudo_atomic.py" = ["C901"]
"src/atomic_femdvr/softcoul_solvers.py" = ["C901"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.isort]
relative-imports-order = "closest-to-furthest"
known-third-party = [
    "tqdm",
]
known-first-party = [
    "atomic_femdvr",
    "tests",
]

[tool.ruff.format]
# see https://docs.astral.sh/ruff/settings/#format_docstring-code-format
docstring-code-format = true

[tool.bumpversion]
current_version = "0.0.1-dev"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)(?:-(?P<release>[0-9A-Za-z-]+(?:\\.[0-9A-Za-z-]+)*))?(?:\\+(?P<build>[0-9A-Za-z-]+(?:\\.[0-9A-Za-z-]+)*))?"
serialize = [
    "{major}.{minor}.{patch}-{release}+{build}",
    "{major}.{minor}.{patch}+{build}",
    "{major}.{minor}.{patch}-{release}",
    "{major}.{minor}.{patch}",
]
commit = true
tag = false

[tool.bumpversion.parts.release]
optional_value = "production"
first_value = "dev"
values = [
    "dev",
    "production",
]

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = "version = \"{current_version}\""
replace = "version = \"{new_version}\""

[[tool.bumpversion.files]]
filename = "docs/source/conf.py"
search = "release = \"{current_version}\""
replace = "release = \"{new_version}\""

[[tool.bumpversion.files]]
filename = "src/atomic_femdvr/version.py"
search = "VERSION = \"{current_version}\""
replace = "VERSION = \"{new_version}\""

[[tool.bumpversion.files]]
filename = "CITATION.cff"
search = "version: {current_version}"
replace = "version: {new_version}"
